other/namespace-inventory-check/.chainsaw-test/chainsaw-step-01-apply-2.yaml
apiVersion: v1
kind: ResourceQuota
metadata:
  name: mem-cpu
  namespace: inventory-check-ns01
spec:
  hard:
    limits.cpu: "2"
    limits.memory: 2Gi
    requests.cpu: "1"
    requests.memory: 1Gi
