other/namespace-inventory-check/.chainsaw-test/chainsaw-step-01-apply-3.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inventory-check-ns02
