other/namespace-inventory-check/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: namespace-inventory-check
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1.yaml
    - apply:
        file: chainsaw-step-01-apply-2.yaml
    - apply:
        file: chainsaw-step-01-apply-3.yaml
    - apply:
        file: chainsaw-step-01-apply-4.yaml
    - apply:
        file: chainsaw-step-01-apply-5.yaml
    - apply:
        file: chainsaw-step-01-apply-6.yaml
    - apply:
        file: chainsaw-step-01-apply-7.yaml
  - name: step-02
    try:
    - apply:
        file: ../namespace-inventory-check.yaml
  - name: step-03
    try:
    - assert:
        file: report-assert.yaml
